# AC-Project

Anti-Cheat tool/: Anti-Cheat tool.vcxproj  Anti-Cheat tool.vcxproj.filters  CMakeLists.txt
Anti-Cheat tool/config/: config.json
Anti-Cheat tool/include/: Common.h
Anti-Cheat tool/signatures/: known_cheats.db
Anti-Cheat tool/src/: main.cpp
Anti-Cheat tool/src/core/: DLLInjectionDetection.cpp  DLLInjectionDetector.h  DetectionEngine.cpp  DetectionEngine.h  Logger.h  MemoryScanner.cpp  MemoryScanner.h  ProcessScanner.cpp  ProcessScanner.h
Anti-Cheat tool/src/network/: ReportSender.cpp  ReportSender.h
Anti-Cheat tool/src/utils/: Crypto.cpp  Crypto.h  WinUtils.cpp  WinUtils.h
Anti-Cheat tool/x64/Release/: AntiCheatSystems.exe.recipe  AntiCheatSystems.ipdb
Anti-Cheat tool/x64/Release/AntiCheatSystems.tlog/: AntiCheatSystems.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
